--- a/form.html
+++ b/form.html
@@ -83,7 +83,7 @@
     <div class="formContainer">
         <h1>Car Rental Booking Form</h1>
         <form id="calcForm" method="post" action="http://localhost:3000">
-            <label for="pickup-location">Pickup Location:</label>
+            <label for="pickup-location" class="required-field">Pickup Location:</label>
             <input type="text" id="pickup-location" name="pickup" required>
     
             <label for="dropoff-location">Dropoff Location:</label>
